# pangocairo-rs

./: Cargo.toml  README.md
examples/: rotated.rs
pangocairo-sys/: Cargo.toml  gir-patch.diff
pangocairo-sys/conf/: gir-pangocairo.toml
pangocairo-sys/src/: lib.rs
src/: font_map.rs  lib.rs
