[package]
name = "pangocairo"
version = "0.1.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango"]

[dependencies.pangocairo-sys]
path = "pangocairo-sys"
version = "0.1.0"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"

[lib]
name = "pangocairo"
