[package]
name = "pangocairo"
version = "0.1.1"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango"]

[dependencies.pangocairo-sys]
path = "pangocairo-sys"
version = "0.1.0"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
version = "0.1.1"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"
version = "0.1.1"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.2"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.1.1"

[lib]
name = "pangocairo"

[dev-dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.1.1"
