[package]
name = "pangocairo"
version = "0.1.3"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
description = "Rust bindings for the PangoCairo library"
repository = "https://github.com/razrfalcon/pangocairo-rs"
license = "MIT"
keywords = ["cairo", "pango"]

[dependencies.pangocairo-sys]
path = "pangocairo-sys"
version = "0.1.3"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
version = "0.1.3"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"
version = "0.1.3"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.4"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.1.3"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.3.4"

[lib]
name = "pangocairo"

[dev-dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.1.3"
